update current work discription

--- a/index.html
+++ b/index.html
@@ -257,25 +257,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 		<!-- Current Work -->
 		<div class="w3-container">
-          <h5 class="w3-opacity"><b>Accounts Payable Supervisor / Al Safy Group</b></h5>
+          <h5 class="w3-opacity"><b>Accounts Payable Supervisor | Data analyst / Al Safy Group</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
-			<p>▪ Preparation of monthly commissions file, including all calculations related to coworker variable compensation,
-      while ensuring accuracy of payments.</p>
-      <p>▪ Extract and create custom reports from SQL server database.</p>
-      <p>▪ Create and maintain monthly sales dashboard.</p>
-			<p>▪ Process applicable monthly accounting journal entries as part of the month-end close accounting schedule.</p>
-			<p>▪ Consistently review the commission process, while making applicable improvement recommendations to direct manager.</p>
-			<p>▪ Completion of various sales productivity analysis and reporting.</p>
-			<p>▪ Reporting and analysis of the customer account reassign process.</p>
-			<p>▪ Translates business requirements into specifications used to implement the required reports and dashboards.</p>
-			<p>▪ Reconciles processed work by verifying entries and comparing system reports to balances.</p>
-      <p>▪ Charges expenses to accounts and cost centers by analyzing invoice/expense reports; recording entries.
-      <p>▪ Pays vendors by monitoring discount opportunities; verifying federal id numbers;
-          scheduling and preparing checks; resolving purchase order, contract, invoice,
-          or payment discrepancies and documentation; insuring credit is received for outstanding memos;
-          issuing stop-payments or purchase order amendments.</p>
-      <p>▪ Maintains accounting ledgers by verifying and posting account transactions.</p>
-      <p>▪ Verifies vendor accounts by reconciling monthly statements and related transactions.</p>
+			<ul>
+        <li>Created sales dashboard using Excel power query, DAX functions, and VBA 
+          to analyze and compare the performance of the company branches.
+        </li>
+        <li>Created excel sheet for commission calculation
+           and automated the process of gathering target, sales and KPIs sheets using excel power query and excel advanced formulas.</li>
+        <li>Created a SQL query to extract sales transactions from Microsoft Dynamics AX database.</li>
+        <li>Created an automated cheques issuing process through an excel sheet, that handles cheques printing for several banks.</li>
+        <li>Created a new forms for all the documents in my department like (check cover, credit note, DAP, compensations).</li>
+        <li>Created bank reconcilation sheet that automate the process with excel power query.</li>
+      </ul>
       <hr>
         </div>
 
