update job dicription

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <li>Created excel sheet for commission calculation
            and automated the process of gathering target, sales and KPIs sheets using excel power query and excel advanced formulas.</li>
         <li>Created a SQL query to extract sales transactions from Microsoft Dynamics AX database.</li>
-        <li>Created an automated cheques issuing process through an excel sheet, that handles cheques printing for several banks.</li>
-        <li>Created a new forms for all the documents in my department like (check cover, credit note, DAP, compensations).</li>
+        <li>Developed an automated cheques issuing process through an excel sheet, that handles cheques printing for several banks.</li>
+        <li>Designed a new forms for all the documents in my department like (check cover, credit note, DAP, compensations).</li>
         <li>Created bank reconcilation sheet that automate the process with excel power query.</li>
       </ul>
       <hr>
