--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-file-text fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Summary</h2>
-          <p>Passionate and self-taught person in fields of Data Science and Machine Learning, experienced in Accounting field for 10 years, trying to link these fields together.<br>
-            Experienced in Math, Statistics, SQL, Python and its biggest libraries (Pandas, NumPy, Scikit-learn, PyTorch, Tensor Flow, Keras,  Matplotlib, Seaborn, …).<br>
-             Strong Data cleaning and visualization skill, data analysis professional, with high knowledge in building Machine Learning Models using Cloud Services on Azure and AWS.<br>
+          <p>A passionate and self-taught person in the fields of Data Science and Machine Learning, experienced in the Accounting field for 10 years, trying to link these fields together.<br>
+            Experienced in Math, Statistics, SQL, Python, and its biggest libraries (Pandas, NumPy, Scikit-learn, PyTorch, Tensor Flow, Keras, Matplotlib, Seaborn, …).<br>
+            Strong Data cleaning and visualization skills, data analysis professional, with high knowledge in building Machine Learning Models using Cloud Services on Azure and AWS.<br>
             </p>
         </div>
 
@@ -163,9 +163,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </h6>
             <p>
               <ul>
-                <li>Developed simple web app</li>
-                <li>Developed an RNN neural network to analyze the movie review whether positive or negative with accuracy 88%</li>
-                <p>Technology used: Python, Pytorch, AWS.</p>
+                <li>Developed a simple web app</li>
+                <li>Developed an RNN neural network to analyze the movie review whether positive or negative with an accuracy of 88%</li>
+                <p>The technology used: Python, Pytorch, AWS.</p>
               </ul>
             </p>
             <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
@@ -174,24 +174,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </h6>
             <p>
               <ul>
-                <li>Created new features to measure the similaraty between answer and source text like containment and longest common subsequence</li>
-                <li>Developed a binary cassification neural network with accuracy of 100% </li>
-                <p>Technology used: Python, Pytorch, AWS.</p>
+                <li>Created new features to measure the similarity between answer and source text like containment and longest common subsequence</li>
+                <li>Developed a binary classification neural network with an accuracy of 100% </li>
+                <p>The technology used: Python, Pytorch, AWS.</p>
               </ul>
             </p>
             </div>
             <div class="w3-half">
-              <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
+              <h5 class="w3-opacity"><b>We Rate Dogs Analysis</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 &nbsp;&nbsp;
                 <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
               </h6>
               <p>
-                We rate dog is a twitter account with funny and interesting tweets of rating dogs.<br>
+                We rate dogs is a twitter account with funny and interesting tweets of rating dogs.<br>
                 <ul>
                 <li> Gathered the data from 3 sources (csv, downloaded a tsv file, and twitter API) </li>
                 <li> Cleaned and saved the combined data into SQL database </li>
                 <li> Created report for the analysis and visualization</li>
-                <p>Technology used: Python, SQL, Powerpoint</p>
+                <p>The technology used: Python, SQL, Powerpoint</p>
                 </ul>
               </p>
             <h5 class="w3-opacity"><b>Sakila DVD Rental Analysis</b></h5>
@@ -201,8 +201,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p>
               <ul>
                 <li> Queried the database and Exported csv reports</li>
-                <li> Created reports for the customor analysis using Excel</li>
-                <p> Technology used: Postgresql, Excel, Powerpoint</p>
+                <li> Created reports for the customer analysis using Excel</li>
+                <p> The technology used: Postgresql, Excel, Powerpoint</p>
               </ul>
             </p>
             </div>
@@ -220,9 +220,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                                                            <a href="https://www.coursera.org/" target="_blank">Coursera</a>, 
                                                            <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
                                                            <a href="https://www.pluralsight.com/" target="_blank">Pluralsight</a>, 
-                                                           <a href="https://www.linkedin.com/learning/?trk=nav_neptune_learning" target="_blank">Linkedin Learning</a> and
+                                                           <a href="https://www.linkedin.com/learning/?trk=nav_neptune_learning" target="_blank">Linkedin Learning</a>, and
                                                            <a href="https://www.udemy.com/" target="_blank">Udemy</a>
-                  related to Data Sciencs and Machine learning and currently studying 
+                  related to Data Science and Machine learning, and currently studying 
               <a href="https://www.udacity.com/course/machine-learning-engineer-nanodegree--nd009t" target="_blank">Machine Learning Engineer nanodegree</a>
             </p>
             <hr>
@@ -260,15 +260,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Accounts Payable Supervisor | Data analyst / Al Safy Group</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
 			<ul>
-        <li>Created sales dashboard using Excel power query, DAX functions, and VBA 
-          to analyze and compare the performance of the company branches.
+        <li>Created a sales dashboard using Excel power query, DAX functions,
+           and VBA to analyze and compare the performance of the company branches.
         </li>
-        <li>Created excel sheet for commission calculation
-           and automated the process of gathering target, sales and KPIs sheets using excel power query and excel advanced formulas.</li>
-        <li>Created a SQL query to extract sales transactions from Microsoft Dynamics AX database.</li>
-        <li>Developed an automated cheques issuing process through an excel sheet, that handles cheques printing for several banks.</li>
-        <li>Designed a new forms for all the documents in my department like (check cover, credit note, DAP, compensations).</li>
-        <li>Created bank reconcilation sheet that automate the process with excel power query.</li>
+        <li>Created an excel sheet for commission calculation and automated the process of gathering target,
+           sales, and KPIs sheets using excel power query and excel advanced formulas.</li>
+        <li>Created a SQL query to extract sales transactions from the Microsoft Dynamics AX database.</li>
+        <li>Developed automated cheques issuing process through an excel sheet, that handles cheques printing for several banks.</li>
+        <li>Designed new forms for all the documents in my department like (check cover, credit note, DAP, compensations).</li>
+        <li>Created a bank reconciliation sheet that automates the process with excel power query.</li>
       </ul>
       <hr>
         </div>
