add work location

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 		<!-- Current Work -->
 		<div class="w3-container">
-          <h5 class="w3-opacity"><b>Accounts Payable Supervisor | Data analyst / Al Safy Group</b></h5>
+          <h5 class="w3-opacity"><b>Accounts Payable Supervisor | Data analyst / Al Safy Group - Fifth settlement, New Cairo.</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
 			<ul>
         <li>Created a sales dashboard using Excel power query, DAX functions,
@@ -275,14 +275,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         <!-- 2nd Work -->
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Accounts Payable Supervisor / Master`s Food</b></h5>
+          <h5 class="w3-opacity"><b>Accounts Payable Supervisor / Master`s Food - Zmalek, Giza.</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2015 - May 2018</h6>
         </div>
 
 
 		<!-- 3rd Work -->
         <div class="w3-container">
-            <h5 class="w3-opacity"><b>Income Auditor / Master`s Food</b></h5>
+            <h5 class="w3-opacity"><b>Income Auditor / Master`s Food - Zmalek, Giza.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2015 - Dec 2015</h6>
         </div>
 
@@ -290,21 +290,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 		<!-- 4th Work -->
            <div class="w3-container">
-                <h5 class="w3-opacity"><b>General Cashier / Master`s Food</b></h5>
+                <h5 class="w3-opacity"><b>General Cashier / Master`s Food - Zmalek, Giza.</b></h5>
                 <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2014 - Feb 2015</h6>
           <hr>
         </div>
 
 		<!-- 5th Work -->
         <div class="w3-container">
-            <h5 class="w3-opacity"><b>Accountant / Al Fares Egyptian Co. (Cottonil)</b></h5>
+            <h5 class="w3-opacity"><b>Accountant / Al Fares Egyptian Co. (Cottonil) - Nozha, Cairo.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2013 - May 2014</h6>
 		  <hr>
         </div>
 
 		<!-- 6th Work -->
         <div class="w3-container">
-            <h5 class="w3-opacity"><b>Collector / The International Hospital for Urology and Nephrology</b></h5>
+            <h5 class="w3-opacity"><b>Collector / The International Hospital for Urology and Nephrology - Mohandsin, Giza.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2009 - Feb 2013</h6>
         </div>
       </div>
