update current position

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Accounts Payable Supervisor</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>AP Supervisor | Data Analyst</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Cairo, Egypt</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>a.gharib89@yahoo.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>01096995535</p>
