update project sectoin

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </h6>
             <p>
               <ul>
-                <li>Developed a simple web app</li>
+                <li>Developed a simple web app to classify movie reviews</li>
                 <li>Developed an RNN neural network to analyze the movie review whether positive or negative with an accuracy of 88%</li>
                 <p>The technology used: Python, Pytorch, AWS.</p>
               </ul>
@@ -186,7 +186,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
               </h6>
               <p>
-                We rate dogs is a twitter account with funny and interesting tweets of rating dogs.<br>
                 <ul>
                 <li> Gathered the data from 3 sources (csv, downloaded a tsv file, and twitter API) </li>
                 <li> Cleaned and saved the combined data into SQL database </li>
@@ -200,6 +199,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </h6>
             <p>
               <ul>
+                <li>Setup the sakila database using pgAdmin</li>
                 <li> Queried the database and Exported csv reports</li>
                 <li> Created reports for the customer analysis using Excel</li>
                 <p> The technology used: Postgresql, Excel, Powerpoint</p>
