--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">70%</div>
             </div>
             </div>
-            <p>Web development (Javascript, JQuery, HTML, CSS, Flask </p>
+            <p>Web development (Javascript, JQuery, HTML, CSS, Flask) </p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
