update summary and education sections

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-file-text fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Summary</h2>
-          <p>A passionate and self-taught person in the fields of Data Science and Machine Learning, experienced in the
-            Accounting field for 10 years, trying to link these fields together.<br>
+          <p>An avid programmer in data science and machine learning combined with a professional background of
+             10+ years in accounting.<br>
             Experienced in Math, Statistics, SQL, Python, and its biggest libraries (Pandas, NumPy, Scikit-learn,
             PyTorch, TensorFlow, Keras, Matplotlib, Seaborn, …).<br>
             Strong Data cleaning and visualization skills, data analysis professional, with high knowledge in building
@@ -239,9 +239,9 @@
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Education</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Online Self Study</b></h5>
+            <h5 class="w3-opacity"><b>Online courses and programms</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-            <p>I have taken more than 120 online courses at
+            <p>I have successfully completed more than 120 online courses at
               <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
               <a href="https://www.coursera.org/" target="_blank">Coursera</a>,
               <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
@@ -251,7 +251,8 @@
               <a href="https://www.udemy.com/" target="_blank">Udemy</a>
               related to Data Science and Machine learning, and currently studying
               <a href="https://www.udacity.com/course/machine-learning-engineer-nanodegree--nd009t"
-                target="_blank">Machine Learning Engineer nanodegree</a>
+                target="_blank">Machine Learning Engineer nanodegree</a> as I was selected among top 325
+                 out of 16000 students enrolled in AWS scholarship at udacity.
             </p>
             <hr>
           </div>
