--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p class="w3-large"><b><i class="fa fa-forward fa-fw w3-margin-right w3-text-black"></i>Skills</b></p>
 
             <p class="w3-large"><i class="fa fa-code w3-margin-right w3-text-black"></i>Programming</p>
-            <p>Python (NumPy, Pandas, Matplotlib, Seaborn</p>
+            <p>Python (NumPy, Pandas, Matplotlib, Seaborn)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">
                 <div class="w3-center w3-text-white">80%</div>
