Update work experience

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
           <!-- Current Work -->
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Accounts Payable Supervisor | Data analyst / Al Safy Group - Fifth settlement, New
+            <h5 class="w3-opacity"><b>Data analyst / Al Safy Group - Fifth settlement, New
                 Cairo.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
@@ -305,7 +305,7 @@
               </li>
               <li>Created an excel sheet for commission calculation and automated the process of gathering target,
                 sales, and KPIs sheets using excel power query and excel advanced formulas.</li>
-              <li>Created a SQL query to extract sales transactions from the Microsoft Dynamics AX database.</li>
+              <li>Creating a SQL queries to extract sales transactions from the Microsoft Dynamics AX database.</li>
               <li>Developed automated cheques issuing process through an excel sheet, that handles cheques printing for
                 several banks.</li>
               <li>Designed new forms for all the documents in my department like (check cover, credit note, DAP,
