Edit the current position

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>AP Supervisor | Data Analyst
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Data Analyst
             </p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Cairo, Egypt</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>a.gharib89@yahoo.com</p>
