Add Advanced Data Analysis Certificate

--- a/index.html
+++ b/index.html
@@ -261,16 +261,18 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">
+              <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">Advanced Data
+                Analysis Nanodegree</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data
                 Analysis Professional Nanodegree</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
                 target="_blank">Deep Learning Specialization</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming
                 for Data Science Nanodegree</a><br>
-              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7"
-                target="_blank">Mathematics for Machine Learning Specialization</a><br>
             </div>
             <div class="w3-half">
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7"
+                target="_blank">Mathematics for Machine Learning Specialization</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5"
                 target="_blank">Data Scientist with Python Track</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89"
