--- a/index.html
+++ b/index.html
@@ -262,23 +262,23 @@
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">
               <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">Advanced Data
-                Analysis Nanodegree</a><br>
+                Analysis Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data
-                Analysis Professional Nanodegree</a><br>
+                Analysis Professional Nanodegree - Udacity</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
-                target="_blank">Deep Learning Specialization</a><br>
+                target="_blank">Deep Learning Specialization - Coursera</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming
-                for Data Science Nanodegree</a><br>
+                for Data Science Nanodegree - Udacity</a><br>
             </div>
             <div class="w3-half">
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7"
-                target="_blank">Mathematics for Machine Learning Specialization</a><br>
+                target="_blank">Mathematics for Machine Learning Specialization - Coursera</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5"
-                target="_blank">Data Scientist with Python Track</a><br>
+                target="_blank">Data Scientist with Python Track - DataCamp</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89"
-                target="_blank">Data Analyst with Python Track</a><br>
+                target="_blank">Data Analyst with Python Track - DataCamp</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/3357c731d727f6a7a6573ad7212f758138bdcb9f"
-                target="_blank">Python Programming Track</a><br>
+                target="_blank">Python Programming Track - DataCamp</a><br>
             </div>
           </div>
           <hr>
