Add Dog Breed Project

--- a/index.html
+++ b/index.html
@@ -177,17 +177,19 @@
               class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black">assessment</i>Projects</h2>
           <div class="w3-container">
             <div class="w3-half">
-              <h5 class="w3-opacity"><b>Deploy Sentiment Analysis Model</b></h5>
-              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
-                <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See
+              <h5 class="w3-opacity"><b>Dog Breed Classifier Application</b></h5>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2020 &nbsp;&nbsp;
+                <a href="https://github.com/ahmed-gharib89/dog-classification" target="_blank">See
                   project</a>
               </h6>
               <p>
               <ul>
-                <li>Developed a simple web app to classify movie reviews</li>
-                <li>Developed an RNN neural network to analyze the movie review whether positive or negative with an
-                  accuracy of 88%</li>
-                <p>The technology used: Python, Pytorch, AWS.</p>
+                <li>Developed a Convolutional Neural Network using transfer learning with an
+                  accuracy of 83%</li>
+                <li>Created an app the takes an image and detect if there is a dog and returns the dog Breed
+                  and in case a human detected it returns the most similar dog breed.
+                </li>
+                <p>The technology used: Python and Pytorch.</p>
               </ul>
               </p>
               <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
