Update dog breed project discription

--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
               <ul>
                 <li>Developed a Convolutional Neural Network using transfer learning with an
                   accuracy of 83%</li>
-                <li>Created an app the takes an image and detect if there is a dog and returns the dog Breed
-                  and in case a human detected it returns the most similar dog breed.
+                <li>Created an app that takes an image and checks if a dog in the image returns it's breed.
                 </li>
                 <p>The technology used: Python and Pytorch.</p>
               </ul>
