--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <ul>
                 <li>Developed a Convolutional Neural Network using transfer learning with an
                   accuracy of 83%</li>
-                <li>Created an app that takes an image and checks if a dog in the image returns it's breed.
+                <li>Created an app that takes an image and checks if a dog in the image returns its breed.
                     and if a human in the image returns the nearest dog breed.
                 </li>
                 <p>The technology used: Python and Pytorch.</p>
