--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Online courses and programms</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-            <p>I have successfully completed more than 120 online courses at
+            <p>I have successfully completed more than 130 online courses at
               <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
               <a href="https://www.coursera.org/" target="_blank">Coursera</a>,
               <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
@@ -252,9 +252,8 @@
                 Learning</a>, and
               <a href="https://www.udemy.com/" target="_blank">Udemy</a>
               related to Data Science and Machine learning, and currently studying
-              <a href="https://www.udacity.com/course/machine-learning-engineer-nanodegree--nd009t"
-                target="_blank">Machine Learning Engineer nanodegree</a> as I was selected among top 325
-                 out of 16000 students enrolled in AWS scholarship at udacity.
+              <a href="https://www.udacity.com/course/ai-programming-python-nanodegree--nd089"
+                target="_blank">AI Programming with Python Nanodegree at Udacity</a>
             </p>
             <hr>
           </div>
@@ -262,7 +261,9 @@
           <div class="w3-container">
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
-            <div class="w3-half">
+            <div class="w3-half">              
+              <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
+                Machine Learning Engineer Nanodegree- Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">Advanced Data
                 Analysis Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data
