--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
               <a href="https://www.linkedin.com/learning/?trk=nav_neptune_learning" target="_blank">Linkedin
                 Learning</a>, and
               <a href="https://www.udemy.com/" target="_blank">Udemy</a>
-              related to Data Science and Machine learning, and currently studying
-              <a href="https://www.udacity.com/course/ai-programming-python-nanodegree--nd089"
-                target="_blank">AI Programming with Python Nanodegree at Udacity</a>
+              related to Data Science and Machine learning, <br> 
+              And currently studying
+              <a href="https://admissions.udacity.com/apply/Web-T3-C7-FWD"
+                target="_blank">Advanced Web Development Nanodegree at Udacity</a>
             </p>
             <hr>
           </div>
@@ -262,18 +263,22 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">              
-              <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
-                Machine Learning Engineer Nanodegree- Udacity</a><br>
+                <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
+                    Web Development Professional Nanodegree - Udacity</a><br>
+                <a href="https://graduation-api.udacity.com/api/certificate/3YKJDWHD/download" target="_blank">
+                    AI Programming with Python Nanodegree - Udacity</a><br>
+                <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
+                    Machine Learning Engineer Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">Advanced Data
                 Analysis Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data
                 Analysis Professional Nanodegree - Udacity</a><br>
-              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
-                target="_blank">Deep Learning Specialization - Coursera</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming
                 for Data Science Nanodegree - Udacity</a><br>
             </div>
             <div class="w3-half">
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
+                 target="_blank">Deep Learning Specialization - Coursera</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7"
                 target="_blank">Mathematics for Machine Learning Specialization - Coursera</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5"
