Added Advanced Web Nanodegree

--- a/index.html
+++ b/index.html
@@ -263,20 +263,22 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">              
+              <a href="https://graduation-api.udacity.com/api/certificate/WNY57CWJ/download" target="_blank">
+                Advanced Web Development Nanodegree - Udacity</a><br>
                 <a href="https://graduation-api.udacity.com/api/certificate/VCGRCAFZ/download" target="_blank">
-                    Web Development Professional Nanodegree - Udacity</a><br>
+                Web Development Professional Nanodegree - Udacity</a><br>
                 <a href="https://graduation-api.udacity.com/api/certificate/3YKJDWHD/download" target="_blank">
-                    AI Programming with Python Nanodegree - Udacity</a><br>
+                AI Programming with Python Nanodegree - Udacity</a><br>
                 <a href="https://graduation-api.udacity.com/api/certificate/GSAQAGGJ/download" target="_blank">
-                    Machine Learning Engineer Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">Advanced Data
-                Analysis Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data
-                Analysis Professional Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming
-                for Data Science Nanodegree - Udacity</a><br>
+                Machine Learning Engineer Nanodegree - Udacity</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">
+                Advanced Data Analysis Nanodegree - Udacity</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">
+                Data Analysis Professional Nanodegree - Udacity</a><br>
             </div>
             <div class="w3-half">
+              <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">
+                Programming for Data Science Nanodegree - Udacity</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
                  target="_blank">Deep Learning Specialization - Coursera</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7"
