Added Studying Machine Learning Scientist

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               related to Data Science and Machine learning, <br> 
               And currently studying
               <a href="https://admissions.udacity.com/apply/Web-T3-C7-FWD"
-                target="_blank">Advanced Web Development Nanodegree at Udacity</a>
+                target="_blank">Machine Learning Scientist Career Track at DataCamp</a>
             </p>
             <hr>
           </div>
