Adjust the link for currently studying

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
               <a href="https://www.udemy.com/" target="_blank">Udemy</a>
               related to Data Science and Machine learning, <br> 
               And currently studying
-              <a href="https://admissions.udacity.com/apply/Web-T3-C7-FWD"
-                target="_blank">Machine Learning Scientist Career Track at DataCamp</a>
+              <a href="https://learn.datacamp.com/career-tracks/machine-learning-scientist-with-python?version=1"
+                target="_blank">Currently Studying Machine Learning Scientist with Python at DataCamp</a>
             </p>
             <hr>
           </div>
