Update currently studying

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               related to Data Science and Machine learning, <br> 
               And currently studying
               <a href="https://learn.datacamp.com/career-tracks/machine-learning-scientist-with-python?version=1"
-                target="_blank">Currently Studying Machine Learning Scientist with Python at DataCamp</a>
+                target="_blank">Machine Learning Scientist with Python at DataCamp</a>
             </p>
             <hr>
           </div>
