Added Coca-Cola in Work Experience

--- a/index.html
+++ b/index.html
@@ -309,10 +309,32 @@
 
           <!-- Current Work -->
           <div class="w3-container">
+            <h5 class="w3-opacity"><b>Senior Bi Developer / Coca-Cola - Nasr City,
+                Cairo.</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2020 - <span
+                class="w3-tag w3-opacity w3-round">Current</span></h6>
+            <ul>
+              <li>
+                Creating and maintaining (Sales, Finance and HR) Dashboards using Power BI.
+              </li>
+              <li>Managed to automate the process of collecting budget, RE and customers Target from commercial team (Data provided in excel sheets)
+                 and split the target by Sales Office, Route, SKU, Day, Etc... using python and PostgreSQL.
+              </li>
+              <li>
+                Preparing budget, RE and Target templates for upload to SAP Copa and SAC.
+              </li>
+              <li>
+                Preparing paginated reports for sales to be sent daily via Microsoft power automate.
+              </li>
+            </ul>
+            <hr>
+          </div>
+
+          <!-- 2nd Work -->
+          <div class="w3-container">
             <h5 class="w3-opacity"><b>Data analyst / Al Safy Group - Fifth settlement, New
                 Cairo.</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span
-                class="w3-tag w3-opacity w3-round">Current</span></h6>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - Dec 2020</h6>
             <ul>
               <li>Created a sales dashboard using Excel power query, DAX functions,
                 and VBA to analyze and compare the performance of the company branches.
@@ -329,14 +351,14 @@
             <hr>
           </div>
 
-          <!-- 2nd Work -->
+          <!-- 3rd Work -->
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Accounts Payable Supervisor / Master`s Food - Zmalek, Giza.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2015 - May 2018</h6>
           </div>
 
 
-          <!-- 3rd Work -->
+          <!-- 4th Work -->
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Income Auditor / Master`s Food - Zmalek, Giza.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2015 - Dec 2015</h6>
@@ -344,21 +366,21 @@
 
 
 
-          <!-- 4th Work -->
+          <!-- 5th Work -->
           <div class="w3-container">
             <h5 class="w3-opacity"><b>General Cashier / Master`s Food - Zmalek, Giza.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2014 - Feb 2015</h6>
             <hr>
           </div>
 
-          <!-- 5th Work -->
+          <!-- 6th Work -->
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Accountant / Al Fares Egyptian Co. (Cottonil) - Nozha, Cairo.</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2013 - May 2014</h6>
             <hr>
           </div>
 
-          <!-- 6th Work -->
+          <!-- 7th Work -->
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Collector / The International Hospital for Urology and Nephrology - Mohandsin,
                 Giza.</b></h5>
