Update Cocacola Work Experience

--- a/index.html
+++ b/index.html
@@ -315,13 +315,14 @@
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <ul>
               <li>
-                Creating and maintaining (Sales, Finance and HR) Dashboards using Power BI.
+                Creating and maintaining (Sales, Finance, and HR) Dashboards using Power BI.
               </li>
-              <li>Managed to automate the process of collecting budget, RE and customers Target from commercial team (Data provided in excel sheets)
-                 and split the target by Sales Office, Route, SKU, Day, Etc... using python and PostgreSQL.
+              <li>Managed to automate the process of collecting budget, RE, and customers 
+                Target from the commercial team (Data provided in excel sheets) 
+                and split the target by Sales Office, Route, SKU, Day, Etc... using python and PostgreSQL.
               </li>
               <li>
-                Preparing budget, RE and Target templates for upload to SAP Copa and SAC.
+                Preparing a budget, RE, and Target template for upload to SAP Copa and SAC.
               </li>
               <li>
                 Preparing paginated reports for sales to be sent daily via Microsoft power automate.
