--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
           <div class="w3-container">
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
-            <div class="w3-half">              
+            <div class="w3-half">  
+              <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
+                target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>            
               <a href="https://graduation-api.udacity.com/api/certificate/K5FFHVYU/download" target="_blank">
                 Agile Software Developer Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/WNY57CWJ/download" target="_blank">
@@ -275,10 +277,10 @@
               Machine Learning Engineer Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/J7PRGLZQ/download" target="_blank">
                 Advanced Data Analysis Nanodegree - Udacity</a><br>
-              <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">
-                Data Analysis Professional Nanodegree - Udacity</a><br>
             </div>
             <div class="w3-half">
+              <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">
+                Data Analysis Professional Nanodegree - Udacity</a><br>
               <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">
                 Programming for Data Science Nanodegree - Udacity</a><br>
               <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV"
