--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Online courses and programms</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-            <p>I have successfully completed more than 140 online courses at
+            <p>I have successfully completed more than 200 online courses at
               <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
               <a href="https://www.coursera.org/" target="_blank">Coursera</a>,
               <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
@@ -263,6 +263,8 @@
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span
                 class="w3-tag w3-opacity w3-round">Current</span></h6>
             <div class="w3-half">  
+              <a href="https://graduation-api.udacity.com/api/certificate/ZCREQMK6/download" target="_blank">
+                Data Analysis and Visualization with Power BI - Udacity</a><br>
               <a href="https://www.datacamp.com/statement-of-accomplishment/track/0939af8d203093c470cd8551dfa22cf454610ba9"
                 target="_blank">Data Analyst with SQL Server Track - DataCamp</a><br>            
               <a href="https://graduation-api.udacity.com/api/certificate/K5FFHVYU/download" target="_blank">
